2002-03-01  Darin Adler  <darin@bentspoon.com>

	* src/nautilus-window-toolbars.c: (set_up_toolbar_images):
	Remove unneeded code to set icon for the deleted Web Search button.
	* icons/SearchWeb.png: Remove.
	* icons/crux_eggplant/SearchWeb.png: Remove.
	* icons/crux_teal/SearchWeb.png: Remove.
	* icons/default/SearchWeb.png: Remove.
	* icons/gnome/SearchWeb.png: Remove.
	* icons/search_results.png: Remove.
	* icons/services-rpm-72.png: Remove.

	* libnautilus-private/nautilus-icon-container.c:
	(nautilus_icon_container_theme_changed): Use text-selection-frame.png,
	not text-selection-frame-aa.png.
	* icons/text-selection-frame-aa.png: Rename to remove -aa.
	* icons/text-selection-frame.png: New home for the file.

	* icons/Makefile.am:
	* icons/crux_eggplant/Makefile.am:
	* icons/crux_teal/Makefile.am:
	* icons/default/Makefile.am:
	* icons/gnome/Makefile.am:
	Update as needed for changes above.

2002-03-01  Alexander Larsson  <alla@lysator.liu.se>

	* libnautilus-private/nautilus-icon-dnd.c (nautilus_icon_dnd_begin_drag):
	Events are in bin_window coordinates. Not world coords.

2002-02-28 John Fleck <jfleck@inkstain.net>

	* add help/xmldocs.make
	* configure.in
	* help/nautilus-user-manual/Makefile.am
	* help/nautilus-user-manual/C/Makefile.am
	* help/nautilus-user-manual/C/nautilus-user-manual-C.omf
	* help/nautilus-user-manual/C/nautilus-user-manual.xml (added with
	cvs magic as a copy of the old sgml doc with history)
	converting old doc to xml and changing the build stuff to the new
	GNOME2 docness
	
2002-02-28  Alexander Larsson  <alla@lysator.liu.se>

	* src/nautilus-sidebar.c (nautilus_sidebar_class_init):
	(nautilus_sidebar_realize): Don't call
	gdk_window_set_static_gravities(). That old anti-flicker
	trick was just causing lots of flashing.
	Remove all traces of nautilus_sidebar_realize.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-link-desktop-file.c:
	(nautilus_link_desktop_file_get_link_icon_from_desktop):